--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "electron-rsc",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "src/main.cjs",
+  "type": "module",
   "scripts": {
     "start": "electron .",
     "build": "waku build --config ./vite.config.mts"
