--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "strict": true,
     "target": "esnext",
     "allowJs": true,
+    "checkJs": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
     "module": "nodenext",
@@ -10,5 +11,6 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "jsx": "react-jsx"
-  }
+  },
+  "exclude": ["dist"]
 }
